--- a/app/index_ltr.html
+++ b/app/index_ltr.html
@@ -14,36 +14,40 @@
 
     <!-- Footer -->
     <div class="footer ltr">
-        <div class="container">
-            <ul class="soc-btn flex-container">
-                <a class="google" href="#"></a>
-                <a class="facebook" href="#"></a>
-                <a class="youtube" href="#"></a>
-            </ul>
-            <div class="footer-text flex-container">
-                <p>Ежедневно наша команда будет выбирать для вас 7 специальных продуктов из-за рубежа -
-                    Те, которые вам понравятся, и те, которые вас удивят!</p>
+        <div class="footer-top">
+            <div class="container">
+                <ul class="soc-btn flex-container">
+                    <a class="google" href="#"></a>
+                    <a class="facebook" href="#"></a>
+                    <a class="youtube" href="#"></a>
+                </ul>
+                <div class="footer-text flex-container">
+                    <p>Ежедневно наша команда будет выбирать для вас 7 специальных продуктов из-за рубежа -
+                        Те, которые вам понравятся, и те, которые вас удивят!</p>
+                </div>
+                <form class="footer-question flex-container">
+                    <input type="submit" class="btn btn-primary" value="Я тоже хочу">
+                    <input type="text" class="form-control" placeholder="Email">
+                </form>
+                <div class="footer-big-links flex-container">
+                    <a href="#">Политика конфиденциальности</a>
+                    <a href="#">Политика конфиденциальности</a>
+                    <a href="#">Как с нами связаться</a>
+                    <a href="#">Работы</a>
+                    <a href="#">Правила</a>
+                    <a href="#">Кто мы?</a>
+                </div>
+                <div class="footer-small-links flex-container">
+                    <a href="#">Все для менее 5 шекелей на иврите</a>
+                    <a href="#">Сделка на иврите</a>
+                    <a href="#">Амазонка на Иврит</a>
+                    <a href="#">Али-экспресс на иврите</a>
+                    <a href="#">EBay на Иврит</a>
+                </div>
             </div>
-            <form class="footer-question flex-container">
-                <input type="submit" class="btn btn-primary" value="Я тоже хочу">
-                <input type="text" class="form-control" placeholder="Email">
-            </form>
-            <div class="footer-big-links flex-container">
-                <a href="#">Политика конфиденциальности</a>
-                <a href="#">Политика конфиденциальности</a>
-                <a href="#">Как с нами связаться</a>
-                <a href="#">Работы</a>
-                <a href="#">Правила</a>
-                <a href="#">Кто мы?</a>
-            </div>
-            <div class="footer-small-links flex-container">
-                <a href="#">Все для менее 5 шекелей на иврите</a>
-                <a href="#">Сделка на иврите</a>
-                <a href="#">Амазонка на Иврит</a>
-                <a href="#">Али-экспресс на иврите</a>
-                <a href="#">EBay на Иврит</a>
-            </div>
-            <div class="copyright flex-container">
+        </div>
+        <div class="footer-bottom">
+            <div class="copyright flex-container container">
                 <div class="copyright-logo">
                     <a href="#"></a>
                 </div>
