--- a/app/index_rtl.html
+++ b/app/index_rtl.html
@@ -14,55 +14,59 @@
 
     <!-- Footer -->
     <div class="footer rtl">
-        <div class="container">
-            <div class="soc-btn flex-container">
-                <a class="google" href="#"></a>
-                <a class="facebook" href="#"></a>
-                <a class="youtube" href="#"></a>
-            </div>
-            <div class="footer-text flex-container">
-                <p>מדי יום, הצוות שלנו יבחר בשבילך 7 מוצרים מיוחדים מחו"ל -
-                    כאלה שימצאו חן בעיניך וכאלה שיפתיעו אותך!</p>
-            </div>
-            <form class="footer-question flex-container">
-                <input type="submit" class="btn btn-primary" value="גם אני רוצה">
-                <input type="text" class="form-control" placeholder="הזן כתובת מייל">
-            </form>
-            <div class="footer-big-links flex-container">
-                <a href="#">Privacy policy</a>
-                <a href="#">מדיניות פרטיות</a>
-                <a href="#">צור קשר</a>
-                <a href="#">דרושים</a>
-                <a href="#">תקנון</a>
-                <a href="#">מי אנחנו?</a>
-            </div>
-            <div class="footer-small-links flex-container">
-                <a href="#">הכל בפחות מ-5 ש"ח בעברית</a>
-                <a href="#">דיל אקסטרים בעברית</a>
-                <a href="#">אמזון בעברית</a>
-                <a href="#">אלי אקספרס בעברית</a>
-                <a href="#">איביי בעברית</a>
+        <div class="footer-top">
+            <div class="container">
+                <div class="soc-btn flex-container">
+                    <a class="google" href="#"></a>
+                    <a class="facebook" href="#"></a>
+                    <a class="youtube" href="#"></a>
+                </div>
+                <div class="footer-text flex-container">
+                    <p>מדי יום, הצוות שלנו יבחר בשבילך 7 מוצרים מיוחדים מחו"ל -
+                        כאלה שימצאו חן בעיניך וכאלה שיפתיעו אותך!</p>
+                </div>
+                <form class="footer-question flex-container">
+                    <input type="submit" class="btn btn-primary" value="גם אני רוצה">
+                    <input type="text" class="form-control" placeholder="הזן כתובת מייל">
+                </form>
+                <div class="footer-big-links flex-container">
+                    <a href="#">Privacy policy</a>
+                    <a href="#">מדיניות פרטיות</a>
+                    <a href="#">צור קשר</a>
+                    <a href="#">דרושים</a>
+                    <a href="#">תקנון</a>
+                    <a href="#">מי אנחנו?</a>
+                </div>
+                <div class="footer-small-links flex-container">
+                    <a href="#">הכל בפחות מ-5 ש"ח בעברית</a>
+                    <a href="#">דיל אקסטרים בעברית</a>
+                    <a href="#">אמזון בעברית</a>
+                    <a href="#">אלי אקספרס בעברית</a>
+                    <a href="#">איביי בעברית</a>
+                </div>
             </div>
         </div>
-        <div class="copyright container flex-container">
-            <div class="copyright-logo">
-                <a href="#"></a>
-            </div>
-            <div class="soc-btn mobile flex-container">
-                <a class="google" href="#"></a>
-                <a class="facebook" href="#"></a>
-                <a class="youtube" href="#"></a>
-            </div>
-            <div class="copyright-cards flex-container">
-                <a class="bitc" href="#"></a>
-                <a class="amex" href="#"></a>
-                <a class="visa" href="#"></a>
-                <a class="isracard" href="#"></a>
-                <a class="master" href="#"></a>
-            </div>
-            <div class="copyright-text">
-                <p>כתובת למשלוח דואר: ת.ד. 15224, באר שבע, 8412101</p>
-                <span>זיפי 2017 © כל הזכויות שמורות</span>
+        <div class="footer-bottom">
+            <div class="copyright container flex-container">
+                <div class="copyright-logo">
+                    <a href="#"></a>
+                </div>
+                <div class="soc-btn mobile flex-container">
+                    <a class="google" href="#"></a>
+                    <a class="facebook" href="#"></a>
+                    <a class="youtube" href="#"></a>
+                </div>
+                <div class="copyright-cards flex-container">
+                    <a class="bitc" href="#"></a>
+                    <a class="amex" href="#"></a>
+                    <a class="visa" href="#"></a>
+                    <a class="isracard" href="#"></a>
+                    <a class="master" href="#"></a>
+                </div>
+                <div class="copyright-text">
+                    <p>כתובת למשלוח דואר: ת.ד. 15224, באר שבע, 8412101</p>
+                    <span>זיפי 2017 © כל הזכויות שמורות</span>
+                </div>
             </div>
         </div>
     </div>
