--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <!-- Footer -->
-    <div class="footer rtl">
+    <div class="footer">
         <div class="footer-top">
             <div class="container">
                 <div class="soc-btn flex-container">
