--- a/app/index_ltr.html
+++ b/app/index_ltr.html
@@ -8,12 +8,13 @@
     <title>Footer</title>
 
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style-ltr.css">
 
 </head>
 <body>
 
     <!-- Footer -->
-    <div class="footer ltr">
+    <div class="footer">
         <div class="footer-top">
             <div class="container">
                 <ul class="soc-btn flex-container">
@@ -30,9 +31,9 @@
                     <input type="text" class="form-control" placeholder="Email">
                 </form>
                 <div class="footer-big-links flex-container">
+                    <a href="#">Privacy policy</a>
                     <a href="#">Политика конфиденциальности</a>
-                    <a href="#">Политика конфиденциальности</a>
-                    <a href="#">Как с нами связаться</a>
+                    <a href="#">Связаться</a>
                     <a href="#">Работы</a>
                     <a href="#">Правила</a>
                     <a href="#">Кто мы?</a>
